2015-04-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Do not split off the marked region
	into a separate partition, but do the replacings in the current one,
	taking good care to stay within the boundaries of the region.  This
	fixes an undo bug where the first part of a line would disappear if
	the region started in the middle of a line.  Bug was reported here:
	https://lists.gnu.org/archive/html/nano-devel/2015-03/msg00077.html.

2015-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_select_dirname, findnextfile): Rename
	'currselected' to 'looking_at', for more contrast with 'selected',
	and rename browser_select_filename() to browser_select_dirname().
	* src/text.c: Correct and adjust some comments.

2015-04-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_fileresearch): Don't search for the empty string
	when nothing was sought yet (when historylog is set).
	* src/browser.c (filesearch_init): Remove an unfitting comment
	(there are no toggles here) and tweak some others.
	* src/search.c (do_search, do_research): Use the same variable as
	in the surrounding code, for consistency.
	* src/browser.c (findnextfile_wrap_reset): Elide this function,
	and rename 'search_last_file' to 'came_full_circle'.
	* src/browser.c (filesearch_init, do_fileresearch): Avoid setting
	'focusing' when searching only for filenames.
	* src/browser.c (findnextfile, do_filesearch, do_fileresearch):
	Greatly simplify the searching for the next matching filename.
	* src/{browser,files,help,prompt,text,winio}.c: Let the function
	bottombars() set the global variable 'currmenu' -- the displayed
	menu must necessarily be the active one.
	* src/browser.c (filesearch_abort): Elide this tiny function.
	* THANKS: Add the names of recent translators, and sort the list.
	* THANKS: A neater layout, plus two table headers.

2015-04-05  Benno Schulenberg  <bensberg@justemail.net>